dev: added a little space on the bottom of plugin settings (so it is no longer stuck to the footer)

--- a/application/extensions/SettingsWidget/assets/settingswidget.css
+++ b/application/extensions/SettingsWidget/assets/settingswidget.css
@@ -52,6 +52,7 @@ div.row {
 
 .settingswidget {
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .settingswidget .setting > * {
